infrastructure/infrastructure-pool/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: defimon
  labels:
    name: defimon
    app: defimon
